# gpt-sovits-runpod-serverless

./: .dockerignore  .gitignore  Dockerfile  README.md  handler.py  pyproject.toml  requirements-dev.txt  requirements-gpt-sovits-inference.txt  requirements-serverless.txt  test_input.json
.github/workflows/: docker.yml
.runpod/: hub.json  tests.json
docs/: plan.md
examples/: README.md
src/gpt_sovits_serverless/: __init__.py  audio_encode.py  errors.py  hf_resolver.py  pipeline.py  reference_audio.py  request_schema.py  settings.py
tests/: test_handler.py  test_hf_resolver.py  test_reference_audio.py  test_reference_media_type.py  test_request_schema.py  test_settings.py
